# auto-project

./: Makefile.am  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  main.c
t/: Makefile.am
