SUBDIRS=src t

ACLOCAL_AMFLAGS=-I m4

r3_includedir = $(includedir)/auto-project

# r3_include_HEADERS = \
# 	include/r3.h \
# 	include/r3_define.h \
# 	include/r3_list.h \
# 	include/r3_str.h \
# 	include/r3_gvc.h \
# 	include/str_array.h \
# 	include/zmalloc.h \
# 	$(NULL)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = auto-project.pc

EXTRA_DIST = \
	autogen.sh \
	LICENSE \
	README.md \
	$(NULL)
